--- a/app/partials/admin/infringe.html
+++ b/app/partials/admin/infringe.html
@@ -1,6 +1,6 @@
 <div id = "infringes">
       <div ng-repeat="infringe in infringes">
-         举报人 <a href="#/stream/{{infringe.informer.user.profile.alias}}">{{infringe.informer.user.profile.alias}}</a>
+         举报人 <a href="stream/{{infringe.informer.user.profile.alias}}">{{infringe.informer.user.profile.alias}}</a>
          举报音乐   {{infringe.links}}
          <div>
              <label>举报人版权关系</label>
