--- a/app/partials/auth/confirm.html
+++ b/app/partials/auth/confirm.html
@@ -3,8 +3,8 @@
     <div class="container" style="padding-top:65px;width: 900px">
         <div>
             <legend>身份认证</legend>
-            <span style="padding-left: 30px;"><a href="#"><i class="icon-home"></i> 返回首页</a></span>
-            <h4 style="padding-left: 30px;padding-top: 30px">{{result}}</h4>
+            <span style="padding-left: 30px;"><a href="/"><i class="icon-home"></i> 返回首页</a></span>
+            <h4 style="padding-left: 50px;padding-top: 30px">{{result}}</h4>
         </div>
     </div>
 </div>
