--- a/app/partials/stream.html
+++ b/app/partials/stream.html
@@ -14,13 +14,16 @@
     <!--Body content-->
     <div ng-repeat="sound in curSoundList.getList()"  ng-class-even="'player_even'" ng-class-odd="'player_odd'" >
         <div id="sound_{{sound.id}}" class='sound_item row' style="margin-right: 0px;margin-left: 0px">
-            <div id="sound_art_{{sound.id}}" class='sound_art col-md-2 hidden-xs' style="padding-left: 0px;margin-right: -20px;margin-left: -10px">
+            <div id="sound_art_{{sound.id}}" class='sound_art col-md-2 hidden-xs' style="margin-right: -15px;margin-left: -10px">
                 <div id="sound_cover_{{sound.id}}">
                     <div id="sound_cover_ul_{{sound.id}}" class='poster_img'>
-                        <a href="{{sound.title.route}}"><img ng-src="{{sound.poster}}" class="img-responsive"></a>
+                        <a href="{{sound.title.route}}">
+                            <img ng-src="{{sound.poster}}" class="img-responsive">
+                        </a>
                     </div>
                 </div>
             </div>
+
             <div id="sound_player_{{sound.id}}" class='sound_player col-md-10 col-xs-12' style="padding-left: 0px;padding-right: 0px;">
                 <div class="pull-right">
                     <div style="font-size: 12px;color: gray" class="pull-right">
@@ -44,7 +47,7 @@
                                 <div class="pull-right">
                                     <ul class="tags">
                                         <li ng-repeat="tag in sound.tags | filter: {curated:true}" style="display: inline">
-                                            <a href="#/stream/tags/{{tag.label}}" ng-show="$index<3">
+                                            <a href="/stream/tags/{{tag.label}}" ng-show="$index<3">
                                                 <span ng-show="tag.curated"><i class="icon-certificate"
                                                                                style="color: #A4D3EE" title="Wooice标签"></i> {{tag.label}}</span>
                                                 <span ng-show="!tag.curated">{{tag.label}}</span>
@@ -71,7 +74,7 @@
                         <img ng-src="img/wave.png" ng-show="!sound.processed" style="height: 100%;width: 100%">
                     </div>
                 </div>
-                <div id="sound_player_footer_{{sound.id}}" class='sound_player_footer border-light-bottom'>
+                <div id="sound_player_footer_{{sound.id}}" class='sound_player_footer'>
                     <div id="sound_commentbox_{{sound.id}}" style="display: none">
                         <form ng-submit="comment()" style="margin-bottom:0px; padding-top: 2px;padding-bottom: 5px">
                             <input type="text" id="sound_commentbox_input_{{sound.id}}"
@@ -85,11 +88,11 @@
                         <div class="col-md-5 hidden-xs" style="padding-left: 0px;padding-right: 0px">
                             <a href="#" class="button button-tiny button-rounded  button-flat action-button"
                                onclick="return false;" ng-click="toggleLike(sound.id)"><i class="icon-heart"></i></i>
-                                <span ng-show="sound.soundUserPrefer.like=='0'">赞之</span></a>
+                                <span ng-show="sound.soundUserPrefer.like=='0'">赞</span></a>
                             <a href="#" class="button button-tiny button-rounded  button-flat action-button"
                                onclick="return false;" ng-click="toggleRepost(sound.id)"><i
                                     class="icon-retweet"></i></i> <span
-                                    ng-show="sound.soundUserPrefer.repost==0">转之</span></a>
+                                    ng-show="sound.soundUserPrefer.repost==0">转</span></a>
                             <a href="#" class="button button-tiny button-rounded button-flat action-button hasTooltip"
                                onclick="return false;"
                                     ><i class="icon-share"></i>分享
@@ -98,17 +101,16 @@
                             <div style="display: none;">
                                 <div>
                                     <label style="font-size: 9px">链接分享</label><input type="text"
-                                                                                     style="width: 240px;font-size: 9px"
-                                                                                     value="{{config.site.url}}#/sound/{{sound.alias}}">
-                                    <label style="font-size: 9px">代码分享</label><input type="text" class="input-xlarge"
-                                                                                     style="width: 240px;font-size: 9px"
-                                                                                     value='<iframe width="100%" height="188" scrolling="no" frameborder="no" src="{{config.site.url}}#/player/{{sound.alias}}"></iframe>'>
+                                                                                     class="form-control input-sm"
+                                                                                     value="{{config.site.url}}/sound/{{sound.alias}}">
+                                    <label style="font-size: 9px">代码分享</label><input type="text" class="form-control input-sm"
+                                                                                     value='<iframe width="100%" height="188" scrolling="no" frameborder="no" src="{{config.site.url}}/player/{{sound.alias}}"></iframe>'>
                                 </div>
                                 <div>
-                                    <a href="http://service.weibo.com/share/share.php?url={{config.site.url}}#/
+                                    <a href="http://service.weibo.com/share/share.php?url={{config.site.url}}/
                                 sound/{{sound.alias}}&type=button&count=0&language=zh_cn&appkey=fu5sr&searchPic=false&style=simple"
                                        target="_blank" style="border: 0;width: 32px;height: 32px" title="分到新浪微博"><img
-                                            src="img/logo/sina.png" class="img-responsive"/></a>
+                                            src="img/logo/sina.png"  style="width: 35px"/></a>
                                 </div>
                             </div>
                             <a href="#" class="button button-tiny button-rounded button-flat action-button"
@@ -150,20 +152,20 @@
                                     <span id="play_count_{{sound.id}}">
                                         <span ng-show="!(userService.validateRolePro() || userService.validateRolesPro())">{{sound.soundSocial.playedCount}}</span>
                                         <span ng-show="userService.validateRolePro() || userService.validateRolesPro()"><a
-                                                href="#/sound/{{sound.alias}}?scrollTo=plays">{{sound.soundSocial.playedCount}}</a></span>
+                                                href="sound/{{sound.alias}}?scrollTo=plays">{{sound.soundSocial.playedCount}}</a></span>
                                     </span>
                                 |
-                                <i class="icon-heart stat_icon"></i><a href="#/sound/{{sound.alias}}?scrollTo=likes">{{sound.soundSocial.likesCount}}</a>
+                                <i class="icon-heart stat_icon"></i><a href="sound/{{sound.alias}}?scrollTo=likes">{{sound.soundSocial.likesCount}}</a>
                                 |
                                 <i class="icon-retweet stat_icon"></i><a
-                                    href="#/sound/{{sound.alias}}?scrollTo=reposts">{{sound.soundSocial.reportsCount}}</a>
+                                    href="sound/{{sound.alias}}?scrollTo=reposts">{{sound.soundSocial.reportsCount}}</a>
                                 |
                                 <i class="icon-comment stat_icon"></i><a
-                                    href="#/sound/{{sound.alias}}?scrollTo=comments">{{sound.soundSocial.commentsCount}}</a>
+                                    href="sound/{{sound.alias}}?scrollTo=comments">{{sound.soundSocial.commentsCount}}</a>
                                     <span ng-show="sound.owner.alias == userService.getCurUserAlias()">
                                         |
                                         <i class="icon-eye-open stat_icon"></i><a
-                                            href="#/sound/{{sound.alias}}?scrollTo=visits">{{sound.soundSocial.visitsCount}}</a>
+                                            href="sound/{{sound.alias}}?scrollTo=visits">{{sound.soundSocial.visitsCount}}</a>
                                     </span>
                             </span>
                         </div>
@@ -180,25 +182,25 @@
     <div ng-show="!isloading && curSoundList.getList().length == 0">
         <div ng-show="!routeParams.filter && !routeParams.value"
              style="text-align: center;padding-top: 10%">
-            您还没有推送的声音流，发现自己的<a href="index.html#/interest">乐趣</a>，将有更多声音推送。
+            您还没有推送的声音流，发现自己的<a href="interest">乐趣</a>，将有更多声音推送。
         </div>
 
         <div ng-show="!routeParams.filter && routeParams.value && routeParams.value == userService.getCurUserAlias()"
              style="text-align: center;padding-top: 10%">
-            <span  class="hidden-xs">您还没有自己的音乐流，<a href="index.html#/upload">上传音乐</a>或<a href="index.html#/interest">发现乐趣</a>， 创建属于自己的音乐流。</span>
-            <span class="visible-xs">您还没有自己的音乐流，<a href="index.html#/interest">发现乐趣</a>，建立自己音乐推送。</span>
+            <span  class="hidden-xs">您还没有自己的音乐流，<a href="upload">上传音乐</a>或<a href="interest">发现乐趣</a>， 创建属于自己的音乐流。</span>
+            <span class="visible-xs">您还没有自己的音乐流，<a href="interest">发现乐趣</a>，建立自己音乐推送。</span>
         </div>
 
         <div ng-show="!routeParams.filter && routeParams.value && routeParams.value != userService.getCurUserAlias()"
-             style="text-align: center;padding-top: 10%">
+             style="text-align: center;padding-top: 10%;color:gray">
             {{userCurPage}}未上传或转发声音
         </div>
 
-        <div ng-show="routeParams.filter === 'match'" style="text-align: center;padding-top: 10%">
+        <div ng-show="routeParams.filter === 'match'" style="text-align: center;padding-top: 10%;color:gray">
             没有找到结果，请尝试其他关键词
         </div>
         <div ng-show="routeParams.filter === 'tags' && !$parent.curatedTags"
-             style="text-align: center;padding-top: 10%">
+             style="text-align: center;padding-top: 10%;color:gray">
             没有找到结果，请尝试其他标签
         </div>
         <div ng-show="routeParams.filter === 'tags' && $parent.curatedTags">
