--- a/app/partials/user/basicProfile.html
+++ b/app/partials/user/basicProfile.html
@@ -1,5 +1,5 @@
 <div class="row" ng-controller="basicProfileCtrl">
-    <legend>基本信息</legend>
+    <legend><i class="icon-wrench"></i> 基本信息</legend>
 
     <div class="col-xs-4  hidden-xs">
         <div class="{{posterUploadMsgClass}}">
@@ -17,7 +17,7 @@
                        class="button button-small button-rounded button-flat action-button fileinput-button">
                      <i class="icon-ban-circle icon-white"></i>
                     <span>取消上传</span>
-             </span>
+                 </span>
     </div>
 
     <form name="the_form" class="form-horizontal">
