--- a/app/partials/user/externalProfile.html
+++ b/app/partials/user/externalProfile.html
@@ -1,5 +1,5 @@
 <div ng-controller="externalProfileCtrl">
-    <legend>外站信息</legend>
+    <legend><i class="icon-sitemap"></i> 外站信息</legend>
     <div style="padding-bottom: 10px">
         <span class="{{messageClass}}">{{message}}</span>
     </div>
