--- a/app/partials/user/nav.html
+++ b/app/partials/user/nav.html
@@ -14,8 +14,8 @@
         </li>
 
         <li>
-        <a href="#" onclick="return false;" ng-click="jumpTo('changePass')" style="width: 100%">
-            密码管理</i>
+        <a href="#" onclick="return false;" ng-click="jumpTo('secureManagement')" style="width: 100%">
+            安全管理</i>
         </a>
         </li>
     </ul>
