--- a/app/partials/guest/forgetPass.html
+++ b/app/partials/guest/forgetPass.html
@@ -1,12 +1,14 @@
 <ng-include src="'partials/guest/header.html'"></ng-include>
 <div class="container" style="padding-top: 10% ">
     <legend>重置密码</legend>
-    <div>
+    <span style="padding-left: 30px;"><a href="/"><i class="icon-home"></i> 返回首页</a></span>
+
+    <div style="padding-left: 50px;">
         <h5 ng-class="messageClass">{{message}}</h5>
     </div>
     <div ng-show="show">
         <form name="the_form" class="form-horizontal">
-            <div class="form-group">
+            <div class="form-group" style="padding-left: 50px;">
                     <h4>
                         请输入您的注册邮箱，我们将发送重置密码链接邮件到您的注册邮箱，您可以通过该链接修改密码。
                     </h4>
