--- a/app/partials/guest/login.html
+++ b/app/partials/guest/login.html
@@ -1,4 +1,4 @@
-<div id="login_div"
+<div id="login_div"   ng-controller="loginPageCtrl"
      style="background-image: url('img/home.jpg');background-position:top center; background-repeat:no-repeat;height:100%">
     <div>
         <div class="container">
@@ -13,7 +13,7 @@
                      还没有WOWOICE账号？
                     <a type="submit"
                        class="button glow button-flat-highlight button-small"
-                       href="#/guest/register"><b>马上注册</b>
+                       href="guest/register"><b>马上注册</b>
                     </a>
                     </span>
                     </div>
@@ -26,103 +26,7 @@
                     <div class="row">
                         <div class="col-xs-1 col-md-2"></div>
                         <div class="col-xs-10 col-md-8">
-                            <form name="login" class="form-horizontal" style="padding-top: 30px;">
-                                <div class="hidden-xs" style="padding-top: 60px"></div>
-                                <div class="form-group" style="margin-bottom: 5px">
-                                    <b>WOWOICE</b>登陆
-                                </div>
-                                <div class="form-group">
-                                    <div class="controls {{loginMsgClass}}" style="margin-left: 40px;font-size: 12px">
-                                        <div>
-                                            <div ng-show="error == 'USER_404'">
-                                                用户不存在
-                                            </div>
-                                            <div ng-show="error == 'PASSWORD' || error =='PASSWORD_VERIFY'">
-                                                密码错误
-                                            </div>
-                                            <div ng-show="error == 'VERIFY_CODE'">
-                                                验证码错误
-                                            </div>
-                                            <div ng-show="error == 'ERROR'">
-                                                登陆失败，请稍后再试
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="form-group">
-                                    <div class="controls">
-                                        <div class="input-group">
-                                            <span class="input-group-addon"><i class="icon-user"></i></span>
-                                            <input type="text" id="inputEmail" class="form-control" placeholder="邮箱/用户名"
-                                                   ng-model="userId" required>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="form-group">
-                                    <div class="controls">
-                                        <div class="input-group">
-                                            <span class="input-group-addon"><i class="icon-lock"></i></span>
-                                            <input type="password" id="inputPassword" class="form-control"
-                                                   placeholder="密码"
-                                                   ng-model="password" required>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="form-group" ng-show="showVerify">
-                                    <div class="controls">
-                                        <input type="text" class="input-mini" id="verifyCode" name="verifyCode"
-                                               placeholder="验证码" ng-model="verifyCode">
-                                        <img style="padding-left: 20px"
-                                             ng-src="{{config.service.url_noescp + '/auth/verify/image?refesh=' + refresh}}"
-                                             ng-click="refresh=!refresh" title="看不清单击更换验证码">
-                                    </div>
-                                </div>
-                                <div class="form-group">
-                                    <div class="controls">
-                                        <div style="color: gray; font-size: 12px">
-                                            <span><input type="checkbox" ng-model="rememberUser">  保持登录状态</span>
-                                            <a href="#/guest/forgetPass" class="pull-right  ">忘记密码</a>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="form-group">
-                                    <div class="controls">
-                                        <button type="submit" ng-disabled="login.$invalid"
-                                                class="button glow button-flat-primary form-control"
-                                                ng-click="refresh=!refresh;toLogin()">登陆
-                                        </button>
-                                    </div>
-                                </div>
-                                <div class="form-group">
-                                    <div class="controls">
-                                        <div style="color: gray; font-size: 12px">
-                                            还没有注册WOWOICE?<a href="#/guest/register">立即注册！</a>
-                                        </div>
-                                    </div>
-                                    <div class="hidden-xs" style="padding-top: 10px"></div>
-                                </div>
-                                <div class="form-group" style="padding-top: 5px;margin-bottom: 5px">
-                                    <div class="controls"
-                                         style="border-top-color:#F2F2F2;border-top-style:solid;border-top-width:1px">
-                                        <div style="margin-top: 5px">
-                                            <a href="#" title="新浪微博账号登陆" style="text-decoration:none;"
-                                               ng-click="weiboLogin()"
-                                               onclick="return false;" class="external-logo">
-                                                <i class="icon-weibo icon-2x"></i>
-                                            </a>
-                                            <a href="#" title="腾讯QQ账号登陆"
-                                               style="text-decoration:none;padding-left: 10px;"
-                                               ng-click="qqLogin()"
-                                               onclick="return false;" class="external-logo">
-                                                <img src="img/qq.svg" class="qq_login_log" style="display: none" svg/>
-                                            </a>
-                                            <a href="" title="人人账号登陆" style="text-decoration:none;padding-left: 15px"
-                                               class="external-logo hide"><i
-                                                    class="icon-renren icon-2x"></i></a>
-                                        </div>
-                                    </div>
-                                </div>
-                            </form>
+                            <div ng-include src="'partials/forms/login.html'"></div>
                         </div>
                         <div class="col-xs-1 col-md-2"></div>
                     </div>
