--- a/app/partials/interest.html
+++ b/app/partials/interest.html
@@ -4,90 +4,97 @@
 
 <ng-include src="'partials/header.html'"></ng-include>
 
-<div class="container">
-    <div id="tags">
-        <div class="row">
-            <div class="col-md-6">
-                <div ng-repeat="cate in categories | filter:odd">
-                    <div style="padding-top: 30px;">
-                        <legend>{{cate.name}} <span class="pull-right" style="font-size: 10px"> <label ng-click="cate.showAll=!cate.showAll">More
-                           <i class="icon-double-angle-right" ng-show="cate.showAll"></i><i class="icon-double-angle-down" ng-show="!cate.showAll"></i></label></span></legend>
-                        <div>
-                            <ul class="tags">
-                                <li ng-repeat="curatedTag in curatedTags | filter:{category.name: cate.name}"  ng-show="cate.showAll || $index<5"
-                                     style="padding-right: 25px;padding-bottom: 30px;float: left">
-                                    <a  onclick="return false;" ng-click="toogleInterest()" style="background: {{curatedTag.class}};cursor:pointer;">
-                                       <span > {{curatedTag.label}} </span>
-                                    </a>
-                                </li>
-                                <li style="padding-right: 25px;padding-bottom: 30px;float: left" ng-show="!cate.showAll && curatedTags.length>5">
-                                    <i class="icon-ellipsis-horizontal"></i>
-                                </li>
-                            </ul>
+<div class="row">
+    <div class="col-md-2 col-xs-1"></div>
+    <div class="col-md-8 col-xs-10" style="padding: 100px;padding-top: 0px">
+        <div id="tags">
+            <div class="row">
+                <div class="col-md-6">
+                    <div ng-repeat="cate in categories | filter:odd">
+                        <div style="padding-top: 30px;">
+                            <legend>{{cate.name}} <span class="pull-right" style="font-size: 10px"> <label ng-click="cate.showAll=!cate.showAll">More
+                               <i class="icon-double-angle-right" ng-show="cate.showAll"></i><i class="icon-double-angle-down" ng-show="!cate.showAll"></i></label></span></legend>
+                            <div>
+                                <ul class="tags">
+                                    <li ng-repeat="curatedTag in curatedTags | filter:{category.name: cate.name}"  ng-show="cate.showAll || $index<5"
+                                         style="padding-right: 25px;padding-bottom: 30px;float: left">
+                                        <a  onclick="return false;" ng-click="toogleInterest()" style="background: {{curatedTag.class}};cursor:pointer;">
+                                           <span > {{curatedTag.label}} </span>
+                                        </a>
+                                    </li>
+                                    <li style="padding-right: 25px;padding-bottom: 30px;float: left" ng-show="!cate.showAll && curatedTags.length>5">
+                                        <i class="icon-ellipsis-horizontal"></i>
+                                    </li>
+                                </ul>
+                            </div>
                         </div>
+                        <br>
                     </div>
-                    <br>
                 </div>
-            </div>
 
-            <div class="col-md-6">
-                <div ng-repeat="cate in categories | filter:even">
-                    <div style="padding-top: 30px;">
-                        <legend>{{cate.name}} <span class="pull-right" style="font-size: 10px"> <label ng-click="cate.showAll=!cate.showAll">More
-                            <i class="icon-double-angle-right" ng-show="cate.showAll"></i><i class="icon-double-angle-down" ng-show="!cate.showAll"></i></label></span></legend>
-                        <div>
-                            <ul class="tags">
-                                <li ng-repeat="curatedTag in curatedTags | filter:{category.name: cate.name}"  ng-show="cate.showAll || $index<5"
-                                    style="padding-right: 25px;padding-bottom: 30px;float: left">
-                                    <a onclick="return false;" ng-click="toogleInterest()" style="background: {{curatedTag.class}};cursor:pointer;">
-                                          <span > {{curatedTag.label}} </span>
-                                    </a>
-                                </li>
+                <div class="col-md-6">
+                    <div ng-repeat="cate in categories | filter:even">
+                        <div style="padding-top: 30px;">
+                            <legend>{{cate.name}} <span class="pull-right" style="font-size: 10px"> <label ng-click="cate.showAll=!cate.showAll">More
+                                <i class="icon-double-angle-right" ng-show="cate.showAll"></i><i class="icon-double-angle-down" ng-show="!cate.showAll"></i></label></span></legend>
+                            <div>
+                                <ul class="tags">
+                                    <li ng-repeat="curatedTag in curatedTags | filter:{category.name: cate.name}"  ng-show="cate.showAll || $index<5"
+                                        style="padding-right: 25px;padding-bottom: 30px;float: left">
+                                        <a onclick="return false;" ng-click="toogleInterest()" style="background: {{curatedTag.class}};cursor:pointer;">
+                                              <span > {{curatedTag.label}} </span>
+                                        </a>
+                                    </li>
 
-                                <li style="padding-right: 25px;padding-bottom: 30px;float: left" ng-show="!cate.showAll && curatedTags.length>5">
-                                    <i class="icon-ellipsis-horizontal"></i>
-                                </li>
-                            </ul>
+                                    <li style="padding-right: 25px;padding-bottom: 30px;float: left" ng-show="!cate.showAll && curatedTags.length>5">
+                                        <i class="icon-ellipsis-horizontal"></i>
+                                    </li>
+                                </ul>
+                            </div>
                         </div>
+                        <br>
                     </div>
-                    <br>
                 </div>
             </div>
         </div>
-    </div>
 
-    <div  class="{{msgClass}}" style="padding-bottom: 10px">
-        {{msg}}
-    </div>
+        <div  class="{{msgClass}}" style="padding-bottom: 10px">
+            {{msg}}
+        </div>
 
-    <div id="recommand" style="padding-top: 30px">
-        <legend>推荐用户<i style="cursor:pointer" class='button button-small button-rounded button-flat action-button pull-right'
-                       ng-click="save()">关注</i></legend>
-        <div ng-if="recommendUsers.length > 0" style="padding-left: 10px" class="row">
-            <div ng-repeat="recommendUser in recommendUsers" class="col-md-1 col-xs-3" ng-click="toogleFollow()">
-                <div>
-                    <div class="user {{recommendUser.class}}">
-                        <a href="#" onclick="return false;">
-                            <img class="img-responsive" ng-src="{{recommendUser.profile.avatorUrl}}">
-                        </a>
-                    </div>
-                    </a>
+        <div id="recommand" style="padding-top: 30px">
+            <legend>推荐用户<i style="cursor:pointer" class='button button-small button-rounded button-flat action-button pull-right'
+                           ng-click="save()">关注</i></legend>
+            <div ng-if="recommendUsers.length > 0" style="padding-left: 10px" class="row">
+                <div class="col-md-1 col-xs-3"></div>
+                <div ng-repeat="recommendUser in recommendUsers" class="col-md-1 col-xs-3" ng-click="toogleFollow()" style="padding: 5px">
                     <div>
-                        <a href='{{recommendUser.route}}'>{{recommendUser.profile.alias}}</a>
+                        <div class="user {{recommendUser.class}}">
+                            <a href="#" onclick="return false;">
+                                <img class="img-responsive user_avatar_oval" ng-src="{{recommendUser.profile.avatorUrl}}">
+                            </a>
+                        </div>
+                        </a>
+                        <div  class="user_alias">
+                            <a href='{{recommendUser.route}}'>{{recommendUser.profile.alias}}</a>
+                        </div>
                     </div>
                 </div>
+                <div class="col-md-1 col-xs-3"></div>
             </div>
         </div>
-    </div>
-    <div ng-if="recommendUsers.length == 0">
-        暂无用户推荐
-    </div>
+        <div ng-if="recommendUsers.length == 0">
+            暂无用户推荐
+        </div>
 
-    <div style="padding-top: 20px">
-        <legend>推荐声音</legend>
-        <ng-include src="includePage" autoscroll></ng-include>
+        <div style="padding-top: 20px">
+            <legend>推荐声音</legend>
+            <ng-include src="includePage" autoscroll></ng-include>
+        </div>
     </div>
+    <div class="col-md-2 col-xs-1"></div>
 </div>
+
 <div>
 <ng-include src="'partials/footer.html'"></ng-include>
 </div>
