--- a/app/partials/soundDetail.html
+++ b/app/partials/soundDetail.html
@@ -2,17 +2,13 @@
 
 <div role="main">
 
-<div class="row" style="margin: 0px">
-<div class="col-md-11" style="padding-right: 0px; padding-left: 0px;">
-<!--Body content-->
+<div class="row" style="margin: 0px;padding-top: 20px;">
+<div class="col-md-2"></div>
+<div class="col-md-8" style="padding-right: 0px; padding-left: 0px;">
 <div id="sound_streams">
-
-<div>
     <ng-include src="'partials/sound.html'"></ng-include>
 </div>
-
-</div>
-<!-- Script for wave -->
+<div class="col-md-2"></div>
 </div>
 
 </div>
